add new changes

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ Planning</h5>
         <h1 class="" style="color: black; border-bottom: 3px solid black;">Services</h1>
         <h4 class="text-white" style="color: #626262;">Designed for Today. Ready for Tomorrow.</h4>
       </div>
-          <div class="impact-para  " style="font-size: 22px; padding-bottom: 10px;">
+          <div class="impact-para  " style="font-size: 22px; padding-bottom: 10px; padding-left: 20px;">
     We provide integrated, future-focused services across four key areas:
       </div>
 
