add  new changes

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
 
-  <section class="about fade-in" id="about">
+  <section class="about" id="about">
     <div>
       <div class="header-banner">
         <h1 class="">About Us</h1>
@@ -250,9 +250,9 @@ Planning</h5>
       </div> 
 
 
-     <div class="impact fade-in" id="impackt">
+     <div class="impact" id="impackt">
       <div class="header-banner">
-        <h1 class="" style="color: white; border-bottom: 3px solid white;">impact</h1>
+        <h1 class="" style="color: white; border-bottom: 3px solid white;">Impact</h1>
         <h4 class="text-white" style="color: white;">Turning Strategy Into Value.</h4>
       </div>
 
