Add new changes

--- a/index.html
+++ b/index.html
@@ -645,15 +645,20 @@ Automate data processes to free up resources for high-impact decision-making.
       </div>
       </section>
 
-      <div class="view-buttons">
+      <!-- <div class="view-buttons">
+        <a href="">
+          View All  
+
+        </a>
+      </div> -->
+
+   <div class="jobs-listing">
+ <div class="view-buttons">
         <a href="">
           View All  
 
         </a>
       </div>
-
-   <div class="jobs-listing">
-
   <!-- JOB ITEM 1 -->
 
   <div class="job-card active">
