--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>MR Sastanebal</title>
+  <title>Silver Piston</title>
 <link rel="stylesheet" href="/include/css/style.css">
 <link rel="stylesheet" href="/include/css/about.css">
 <link rel="stylesheet" href="/include/css/header.css">
@@ -66,6 +66,12 @@
 
 </head>
 <body>
+
+  <!-- Loader -->
+<div id="loader">
+  <div class="spinner"></div>
+</div>
+
 
   <!-- <header>
   <div class="header-box" >
@@ -743,7 +749,7 @@ Do your thing. Lead the change. Join Silverpiston.
 
 
       <div class="footer">
-        <h2>2020 Managed By <span>Silverpiston</span> </h2>
+        <h2>2025 Managed By <span>Silverpiston</span> </h2>
       </div>
 
 
@@ -912,6 +918,16 @@ Do your thing. Lead the change. Join Silverpiston.
         card.querySelector(".toggle-icon").textContent = "−";
       }
     });
+  });
+</script>
+
+<script>
+  window.addEventListener("load", function () {
+    const loader = document.getElementById("loader");
+    loader.style.opacity = "0";
+    setTimeout(() => {
+      loader.style.display = "none";
+    }, 500); // Smooth fade-out
   });
 </script>
 
