--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Planning</h5>
       <br>
       
       
-      <span style="padding:13px 10px ;font-weight: 100; font-style: italic; text-align: center;display: flex; align-items: center;justify-content: center;font-size: 36px; line-height: 65px;">
+      <span class="leads-wala">
         Lead with others, leap without fear, keep moving forward, and take charge of your impact — because that's the only way real change happens
       </span>
       <!-- <br> -->
