--- a/index.html
+++ b/index.html
@@ -58,17 +58,31 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 3px;
+  height: 2px;
   width: 50%; /* Half border always visible */
   background: white;
 }
-
+.join-titleBlack {
+  position: relative;
+  display: inline-block;
+  color: #1c1b1b;
+  padding-bottom: 5px;
+}
+.join-titleBlack::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 50%; /* Half border always visible */
+  background: #221F1F;
+}
 /* Animated border part */
 .border-animate {
   position: absolute;
   bottom: 0;
   left: 50%;
-  height: 3px;
+  height: 2px;
   width: 50%;
   background: white;
 }
@@ -161,11 +175,10 @@
 
 
 
-
   <section class="about" id="about">
     <div>
       <div class="header-banner">
-        <h1 class="">About Us</h1>
+        <h1 style="border-bottom: 2px solid #221F1F; color:#1c1b1b" >About Us</h1>
         <h4>Accelerating Potential. Driving Strategic Growth.</h4>
         <!-- <div class="bottom-border"></div> -->
       </div>
@@ -274,7 +287,11 @@
 
      <div class="impact animate__animated animate__slideInUp" id="impact">
       <div class="header-banner" data-aos="fade-up">
-        <h1 class="" style="color: white; border-bottom: 3px solid white;">Impact</h1>
+        <!-- <h1 class="" style="color: white; border-bottom: 3px solid white;">Impact</h1> -->
+           <h1 class="join-title"  >
+   Impact
+    <span class="border-animate " data-aos-delay="100" data-aos="fade-right"></span>
+  </h1>
         <h4 class="text-white" style="color: white;">Turning Strategy Into Value.</h4>
       </div>
 
@@ -335,7 +352,11 @@
  <section>
   <div class="brand fade-in" id="brand">
     <div class="header-banner" data-aos="fade-up">
-        <h1 class="" style="color: black; border-bottom: 3px solid black;">Brand Philosophy</h1>
+        <!-- <h1 class="" style="color: black; border-bottom: 3px solid black;">Brand Philosophy</h1> -->
+                 <h1 class="join-titleBlack"   >
+  Brand Philosophy
+    <span class="border-animate" style="border-bottom: 2px solid #221F1F; color:#1c1b1b"  data-aos-delay="100" data-aos="fade-right"></span>
+  </h1>
         <h4 class="text-white" style="color: #626262;">Built on Belief. Driven by Boldness.</h4>
       </div>
           <div data-aos="fade-up" class="impact-paragraph" style="font-size: 22px; padding-bottom: 10px;padding-left: 20px">
@@ -408,7 +429,11 @@
 
 <section class="key-engagements fade-in" id="key">
   <div class="header-banner" data-aos="fade-up">
-        <h1 class="" style="color: white; border-bottom: 3px solid white;"> Key Engagements</h1>
+     <h1 class="join-title"  >
+    Key Engagements
+    <span class="border-animate" data-aos-delay="100" data-aos="fade-right"></span>
+  </h1>
+        <!-- <h1 class="" style="color: white; border-bottom: 3px solid white;"> Key Engagements</h1> -->
         <!-- <h4 class="text-white" style="color: white;">Accelerating Potential. Driving Strategic Growth.</h4> -->
       </div>
 
@@ -479,7 +504,11 @@
 
 <section class="service fade-in" id="services">
         <div class="header-banner" data-aos="fade-up">
-        <h1 class="" style="color: black; border-bottom: 3px solid black;">Services</h1>
+        <!-- <h1 class="" style="color: black; border-bottom: 3px solid black;">Services</h1> -->
+           <h1 class="join-titleBlack"   >
+Services
+    <span class="border-animate" style="border-bottom: 2px solid #221F1F; color:#1c1b1b" data-aos-delay="100" data-aos="fade-right"></span>
+  </h1>
         <h4 class="text-white" style="color: #626262;">Designed for Today. Ready for Tomorrow.</h4>
       </div>
           <div data-aos="fade-up" class="impact-para" style="font-size: 22px; padding-bottom: 10px;">
@@ -610,7 +639,7 @@ Automate data processes to free up resources for high-impact decision-making.
     Join Us
     <span class="border-animate" data-aos-delay="100" data-aos="fade-right"></span>
   </h1>
-  <h4 class="text-white">Accelerating Potential. Driving Strategic Growth.</h4>
+  <h4 data-aos="fade-down"   style="color: white !important;">Accelerating Potential. Driving Strategic Growth.</h4>
 </div>
 
         
@@ -618,7 +647,7 @@ Automate data processes to free up resources for high-impact decision-making.
 
 
    <div class="jobs-listing">
- <div class="view-buttons" data-aos="fade-up">
+ <div class="view-buttons" data-aos="fade-up-right" data-aos-delay="100">
         <a href="">
           View All  
 
